core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.scss
#mini-map {
  height: 200px;
}

#mini-map-navigator {
  border: 1px solid #797a79;
  position: absolute;
  cursor: move;
  z-index: 1;
}

#mini-map-container {
  position: fixed;
  bottom: 0;
  right: 0px;
  width: 50%;
  z-index: 3;
  user-select: none;
  background: white;
  border-radius: 3px;
  box-shadow:
    0 3px 1px -2px #0003,
    0 2px 2px #00000024,
    0 1px 5px #0000001f;
}

#mini-map-content {
  min-height: 100%;
  max-height: calc(100vh - 200px);
  display: inline-block;
  width: calc(100% - 47px);
}

#title {
  padding: 10px 0 4px 15px;
}

#dock {
  display: inline-block;
  vertical-align: bottom;
  padding-bottom: 10px;
}

